Prevent horizontal video overflow

--- a/src/base/reset.scss
+++ b/src/base/reset.scss
@@ -62,7 +62,7 @@ textarea,
   touch-action: manipulation;
 }
 
-img {
+img, video {
   max-width: 100%;
   height: auto;
 }
